--- a/kotlin-rx/app/src/main/res/values/strings.xml
+++ b/kotlin-rx/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Youknow Movie</string>
+    <string name="err_movies_not_exists">There are no movies...</string>
+    <string name="err_get_movies_failed">Cannot retrieve movies...</string>
 </resources>
