--- a/kotlin-rx/app/src/main/res/values/strings.xml
+++ b/kotlin-rx/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Youknow Movie</string>
     <string name="err_movies_not_exists">There are no movies...</string>
     <string name="err_get_movies_failed">Cannot retrieve movies...</string>
+    <string name="runtime_args">runtime: %1$dmin</string>
 </resources>
