--- a/kotlin-rx/app/src/main/res/values/strings.xml
+++ b/kotlin-rx/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="err_get_movies_failed">Cannot retrieve movies...</string>
     <string name="err_get_movie_failed">Cannot retrieve movie...</string>
     <string name="runtime_args">runtime: %1$dmin</string>
+    <string name="now_playing">Now Playing</string>
+    <string name="upcoming">Upcoming</string>
 </resources>
