--- a/kotlin-rx/app/src/main/res/values/strings.xml
+++ b/kotlin-rx/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="runtime_args">runtime: %1$dmin</string>
     <string name="now_playing">Now Playing</string>
     <string name="upcoming">Upcoming</string>
+    <string name="overview">Overview</string>
 </resources>
